--- a/app/basket.html
+++ b/app/basket.html
@@ -142,7 +142,7 @@
                 <div class="basket-product-item">
                   <button
                     class="btn-close btn-delete-basket-item"
-                    onclick="hideCheckPopup()"
+                    onclick="toggleCheckPopop()"
                   >
                     <svg class="svg-icon btn-delete-basket-item-icon">
                       <use
@@ -181,7 +181,7 @@
                 <div class="basket-product-item">
                   <button
                     class="btn-close btn-delete-basket-item"
-                    onclick="hideCheckPopup()"
+                    onclick="toggleCheckPopop()"
                   >
                     <svg class="svg-icon btn-delete-basket-item-icon">
                       <use
