--- a/app/catalog.html
+++ b/app/catalog.html
@@ -354,18 +354,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
-                    src="./images/dest/img/recommend-img1.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
-                    src="./images/dest/img/recommend-img2.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img1.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -407,18 +397,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
-                    src="./images/dest/img/recommend-img1.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
-                    src="./images/dest/img/recommend-img2.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img1.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -460,18 +440,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
-                    src="./images/dest/img/recommend-img1.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
-                    src="./images/dest/img/recommend-img2.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img1.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -512,18 +482,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
-                    src="./images/dest/img/recommend-img1.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
-                    src="./images/dest/img/recommend-img2.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img1.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -564,18 +524,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
-                    src="./images/dest/img/recommend-img1.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
-                    src="./images/dest/img/recommend-img2.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img1.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -616,18 +566,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
-                    src="./images/dest/img/recommend-img1.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
-                    src="./images/dest/img/recommend-img2.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img1.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -668,18 +608,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
-                    src="./images/dest/img/recommend-img1.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
-                    src="./images/dest/img/recommend-img2.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img1.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
@@ -720,18 +650,8 @@
             <div class="catalog-gal-column">
               <a class="product-recommend-item product-recommend-item--catalog" href="#">
                 <div class="product-recommend-item-img product-recommend-item-img--catalog">
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first"
-                    src="./images/dest/img/recommend-img1.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
-                  <img
-                    class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second"
-                    src="./images/dest/img/recommend-img2.jpg"
-                    alt="recommend image"
-                    data-rjs="2"
-                  />
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog--first" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img1.jpg');"></div>
+                  <div class="product-recommend-item-img-catalog product-recommend-item-img-catalog-second" data-rjs="2" style="background-image: url('./images/dest/img/recommend-img2.jpg');"></div>
                 </div>
                 <div class="product-recommend-item-preorder-wrapper">
                   <p class="product-recommend-item-preorder">Предзаказ</p>
