--- a/app/order.html
+++ b/app/order.html
@@ -116,7 +116,7 @@
     <div class="order-page">
       <div class="container container-order">
         <h1 class="order-title">Оформление заказа</h1>
-        
+
         <form action="" class="order-form order-row">
           <div class="order-column">
           <div class="order-block order-block--delivery">
@@ -173,12 +173,12 @@
             <div class="base-input-wrapper-half">
               <label for="order-house" class="base-input-wrapper base-input-wrapper--adress">
                 <span class="base-input-wrapper-title">Дом</span>
-                <input type="number" class="base-input base-input--order base-input--required" id="order-house" placeholder="21" required>
+                <input class="base-input base-input--order base-input--required" id="order-house" placeholder="21" required>
                 <span class="base-input-err-text">текст ошибки</span>
               </label>
               <label for="order-room" class="base-input-wrapper base-input-wrapper--adress">
                 <span class="base-input-wrapper-title">Квартира</span>
-                <input type="number" class="base-input base-input--order base-input--required" id="order-room" placeholder="91" required>
+                <input class="base-input base-input--order base-input--required" id="order-room" placeholder="91" required>
                 <span class="base-input-err-text">текст ошибки</span>
               </label>
             </div>
