--- a/app/product.html
+++ b/app/product.html
@@ -535,6 +535,161 @@
                 ></div>
               </div>
             </a>
+
+            <a class="product-recommend-item" href="#">
+              <div class="product-recommend-item-img">
+                <img
+                  src="./images/dest/img/recommend-img1.jpg"
+                  alt="recommend image"
+                  data-rjs="2"
+                />
+              </div>
+              <h4 class="product-recommend-item-title">
+                <strong>Кофта</strong> с объёмными пл
+              </h4>
+              <div class="product-recommend-item-price">
+                <span class="price-item price-item--discount">10 000 ₽</span>
+                <span class="price-item price-item--old">15 000 ₽</span>
+              </div>
+              <div class="product-recommend-item-color">
+                <div
+                  class="color-item product-recommend-color-item"
+                  style="background-color: #000000;"
+                ></div>
+                <div
+                  class="color-item product-recommend-color-item"
+                  style="background-color: #8c8c8c;"
+                ></div>
+                <div
+                  class="color-item color-item--border product-recommend-color-item"
+                  style="background-color: #ffffff; border-color: #000000;"
+                ></div>
+              </div>
+            </a>
+
+            <a class="product-recommend-item" href="#">
+              <div class="product-recommend-item-img">
+                <img
+                  src="./images/dest/img/recommend-img1.jpg"
+                  alt="recommend image"
+                  data-rjs="2"
+                />
+              </div>
+              <h4 class="product-recommend-item-title">
+                <strong>Кофта</strong> с объёмными пл
+              </h4>
+              <div class="product-recommend-item-price">
+                <span class="price-item price-item--discount">10 000 ₽</span>
+                <span class="price-item price-item--old">15 000 ₽</span>
+              </div>
+              <div class="product-recommend-item-color">
+                <div
+                  class="color-item product-recommend-color-item"
+                  style="background-color: #000000;"
+                ></div>
+                <div
+                  class="color-item product-recommend-color-item"
+                  style="background-color: #8c8c8c;"
+                ></div>
+                <div
+                  class="color-item color-item--border product-recommend-color-item"
+                  style="background-color: #ffffff; border-color: #000000;"
+                ></div>
+              </div>
+            </a>
+
+            <a class="product-recommend-item" href="#">
+              <div class="product-recommend-item-img">
+                <img
+                  src="./images/dest/img/recommend-img1.jpg"
+                  alt="recommend image"
+                  data-rjs="2"
+                />
+              </div>
+              <h4 class="product-recommend-item-title">
+                <strong>Кофта</strong> с объёмными пл
+              </h4>
+              <div class="product-recommend-item-price">
+                <span class="price-item price-item--discount">10 000 ₽</span>
+                <span class="price-item price-item--old">15 000 ₽</span>
+              </div>
+              <div class="product-recommend-item-color">
+                <div
+                  class="color-item product-recommend-color-item"
+                  style="background-color: #000000;"
+                ></div>
+                <div
+                  class="color-item product-recommend-color-item"
+                  style="background-color: #8c8c8c;"
+                ></div>
+                <div
+                  class="color-item color-item--border product-recommend-color-item"
+                  style="background-color: #ffffff; border-color: #000000;"
+                ></div>
+              </div>
+            </a>
+
+            <a class="product-recommend-item" href="#">
+              <div class="product-recommend-item-img">
+                <img
+                  src="./images/dest/img/recommend-img1.jpg"
+                  alt="recommend image"
+                  data-rjs="2"
+                />
+              </div>
+              <h4 class="product-recommend-item-title">
+                <strong>Кофта</strong> с объёмными пл
+              </h4>
+              <div class="product-recommend-item-price">
+                <span class="price-item price-item--discount">10 000 ₽</span>
+                <span class="price-item price-item--old">15 000 ₽</span>
+              </div>
+              <div class="product-recommend-item-color">
+                <div
+                  class="color-item product-recommend-color-item"
+                  style="background-color: #000000;"
+                ></div>
+                <div
+                  class="color-item product-recommend-color-item"
+                  style="background-color: #8c8c8c;"
+                ></div>
+                <div
+                  class="color-item color-item--border product-recommend-color-item"
+                  style="background-color: #ffffff; border-color: #000000;"
+                ></div>
+              </div>
+            </a>
+
+            <a class="product-recommend-item" href="#">
+              <div class="product-recommend-item-img">
+                <img
+                  src="./images/dest/img/recommend-img1.jpg"
+                  alt="recommend image"
+                  data-rjs="2"
+                />
+              </div>
+              <h4 class="product-recommend-item-title">
+                <strong>Кофта</strong> с объёмными пл
+              </h4>
+              <div class="product-recommend-item-price">
+                <span class="price-item price-item--discount">10 000 ₽</span>
+                <span class="price-item price-item--old">15 000 ₽</span>
+              </div>
+              <div class="product-recommend-item-color">
+                <div
+                  class="color-item product-recommend-color-item"
+                  style="background-color: #000000;"
+                ></div>
+                <div
+                  class="color-item product-recommend-color-item"
+                  style="background-color: #8c8c8c;"
+                ></div>
+                <div
+                  class="color-item color-item--border product-recommend-color-item"
+                  style="background-color: #ffffff; border-color: #000000;"
+                ></div>
+              </div>
+            </a>
           </div>
         </section>
       </div>
