--- a/app/index.html
+++ b/app/index.html
@@ -30,20 +30,9 @@
             ></use>
           </svg>
         </button>
-        <div class="main-header-logo">
+        <a class="main-header-logo" href="/">
           <img src="./images/dest/icons/header-logo.svg" alt="лого" />
-        </div>
-        <!-- <a
-          href="#"
-          class="btn btn-basket main-header-btn-basket btn-basket--full btn-basket--hide-desktop"
-        >
-          <svg class="svg-icon btn-basket-icon">
-            <use
-              xlink:href="./images/sprites/svg/sprite.symbol.svg#basket"
-            ></use>
-          </svg>
-          <span class="visually-hidden">корзина</span>
-        </a> -->
+        </a>
       <nav class="main-header-nav">
         <ul class="main-header-nav-item-wrapper">
           <li class="main-header-nav-item">
@@ -202,8 +191,8 @@
                     sit
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item price-item--discount">10 000 ₽</span>
-                    <span class="price-item price-item--old">15 000 ₽</span>
+                    <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
+                    <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -233,7 +222,7 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item">10 000 ₽</span>
+                    <span class="price-item">10 000 <span class="currency">₽</span></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -263,8 +252,8 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item price-item--discount">10 000 ₽</span>
-                    <span class="price-item price-item--old">15 000 ₽</span>
+                    <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
+                    <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -294,7 +283,7 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item">10 000 ₽</span>
+                    <span class="price-item">10 000 <span class="currency">₽</span></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -323,7 +312,7 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item">10 000 ₽</span>
+                    <span class="price-item">10 000 <span class="currency">₽</span></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -352,7 +341,7 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item">10 000 ₽</span>
+                    <span class="price-item">10 000 <span class="currency">₽</span></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -381,7 +370,7 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item">10 000 ₽</span>
+                    <span class="price-item">10 000 <span class="currency">₽</span></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -411,8 +400,8 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item price-item--discount">10 000 ₽</span>
-                    <span class="price-item price-item--old">15 000 ₽</span>
+                    <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
+                    <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -462,12 +451,15 @@
             placeholder="E-mail"
             class="base-input subscribe-block-input"
           />
-          <p><label class="custom-checkbox-wrapper custom-checkbox-wrapper--catalog-nav">
-            <input type="checkbox" class="custom-checkbox" onchange="onSetFilter('value')">
-            <span class="custom-checkbox-check"></span>
-            <span class="custom-checkbox-text">Я соглашаюсь на обработку моих персональных данных
-              и ознакомлен(а) с условиями публичной оферты</span>
-          </label></p>
+          <div class="subscribe-nda-text">
+            <label class="custom-checkbox-wrapper custom-checkbox-wrapper--catalog-nav">
+              <input type="checkbox" class="custom-checkbox" onchange="onSetFilter('value')">
+  
+              <span class="custom-checkbox-check"></span>
+              <span class="custom-checkbox-text custom-checkbox-text--footer">Я соглашаюсь на обработку моих персональных данных
+                и ознакомлен(а) с условиями публичной оферты</span>
+            </label>
+          </div>
           <button class="btn-primary subscribe-block-btn" type="submit">
             Подписаться
           </button>
