--- a/app/catalog.html
+++ b/app/catalog.html
@@ -22,6 +22,7 @@
         </button>
         <button
           class="btn-search main-header-btn-search btn-search--hide-desktop"
+          onclick="onToggleSearch()"
         >
           <svg class="svg-icon btn-search-icon">
             <use
@@ -29,21 +30,9 @@
             ></use>
           </svg>
         </button>
-        <div class="main-header-logo">
+        <a class="main-header-logo" href="/">
           <img src="./images/dest/icons/header-logo.svg" alt="лого" />
-        </div>
-        <a
-          href="#"
-          class="btn btn-basket main-header-btn-basket btn-basket--full btn-basket--hide-desktop"
-        >
-          <svg class="svg-icon btn-basket-icon">
-            <use
-              xlink:href="./images/sprites/svg/sprite.symbol.svg#basket"
-            ></use>
-          </svg>
-          <span class="visually-hidden">корзина</span>
         </a>
-      </div>
       <nav class="main-header-nav">
         <ul class="main-header-nav-item-wrapper">
           <li class="main-header-nav-item">
@@ -79,14 +68,40 @@
           <li class="main-header-nav-lang-item"><a href="#">en</a></li>
         </ul>
       </nav>
+      
       <div class="main-header-link-block">
-        <button class="btn-search main-header-btn-search header-link-item">
+        <div class="main-header-search-inner">
+          <button
+            class="btn-close btn-close-search"
+            onclick="onToggleSearch()"
+          >
+            <svg class="svg-icon btn-close-search-icon">
+              <use
+                xlink:href="./images/sprites/svg/sprite.symbol.svg#close"
+              ></use>
+            </svg>
+            <span class="visually-hidden">закрыть</span>
+          </button>
+          <input type="text" class="base-input base-input--header-search" id="search-input">
+          <div class="main-header-search-result">
+            <div class="main-header-search-result-content">
+              <span class="main-header-search-result-item--empty">
+                Результатов не найдено
+              </span>
+              <a href="#" class="main-header-search-result-item">Lorem ipsum dolor sit, amet</a>
+              <a href="#" class="main-header-search-result-item">Lorem ipsum</a>
+              <a href="#" class="main-header-search-result-item">Lorem ipsum dolor sit</a>
+            </div>
+          </div>
+        </div>
+        <button class="btn-search main-header-btn-search btn-search--hide-mobile header-link-item" onclick="onToggleSearch()">
           <svg class="svg-icon btn-search-icon">
             <use
               xlink:href="./images/sprites/svg/sprite.symbol.svg#search"
             ></use>
           </svg>
         </button>
+
         <a
           href="#"
           class="btn btn-heart main-header-btn-heart btn-heart--full header-link-item"
@@ -111,7 +126,9 @@
           <span class="visually-hidden">корзина</span>
         </a>
       </div>
+    </div>
     </header>
+
     <div class="catalog-page">
       <div class="container container-catalog">
         <div class="catalog-header">
@@ -364,7 +381,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 ₽</span>
+                  <span class="price-item">10 000 <span class="currency">₽</span></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -407,7 +424,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 ₽</span>
+                  <span class="price-item">10 000 <span class="currency">₽</span></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -450,7 +467,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 ₽</span>
+                  <span class="price-item">10 000 <span class="currency">₽</span></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -492,7 +509,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 ₽</span>
+                  <span class="price-item">10 000 <span class="currency">₽</span></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -534,7 +551,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 ₽</span>
+                  <span class="price-item">10 000 <span class="currency">₽</span></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -576,7 +593,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 ₽</span>
+                  <span class="price-item">10 000 <span class="currency">₽</span></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -618,7 +635,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 ₽</span>
+                  <span class="price-item">10 000 <span class="currency">₽</span></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -660,7 +677,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 ₽</span>
+                  <span class="price-item">10 000 <span class="currency">₽</span></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -741,6 +758,15 @@
             placeholder="E-mail"
             class="base-input subscribe-block-input"
           />
+          <div class="subscribe-nda-text">
+            <label class="custom-checkbox-wrapper custom-checkbox-wrapper--catalog-nav">
+              <input type="checkbox" class="custom-checkbox" onchange="onSetFilter('value')">
+  
+              <span class="custom-checkbox-check"></span>
+              <span class="custom-checkbox-text custom-checkbox-text--footer">Я соглашаюсь на обработку моих персональных данных
+                и ознакомлен(а) с условиями публичной оферты</span>
+            </label>
+          </div>
           <button class="btn-primary subscribe-block-btn" type="submit">
             Подписаться
           </button>
