--- a/app/product.html
+++ b/app/product.html
@@ -22,6 +22,7 @@
         </button>
         <button
           class="btn-search main-header-btn-search btn-search--hide-desktop"
+          onclick="onToggleSearch()"
         >
           <svg class="svg-icon btn-search-icon">
             <use
@@ -29,21 +30,9 @@
             ></use>
           </svg>
         </button>
-        <div class="main-header-logo">
+        <a class="main-header-logo" href="/">
           <img src="./images/dest/icons/header-logo.svg" alt="лого" />
-        </div>
-        <a
-          href="#"
-          class="btn btn-basket main-header-btn-basket btn-basket--full btn-basket--hide-desktop"
-        >
-          <svg class="svg-icon btn-basket-icon">
-            <use
-              xlink:href="./images/sprites/svg/sprite.symbol.svg#basket"
-            ></use>
-          </svg>
-          <span class="visually-hidden">корзина</span>
         </a>
-      </div>
       <nav class="main-header-nav">
         <ul class="main-header-nav-item-wrapper">
           <li class="main-header-nav-item">
@@ -79,14 +68,40 @@
           <li class="main-header-nav-lang-item"><a href="#">en</a></li>
         </ul>
       </nav>
+      
       <div class="main-header-link-block">
-        <button class="btn-search main-header-btn-search header-link-item">
+        <div class="main-header-search-inner">
+          <button
+            class="btn-close btn-close-search"
+            onclick="onToggleSearch()"
+          >
+            <svg class="svg-icon btn-close-search-icon">
+              <use
+                xlink:href="./images/sprites/svg/sprite.symbol.svg#close"
+              ></use>
+            </svg>
+            <span class="visually-hidden">закрыть</span>
+          </button>
+          <input type="text" class="base-input base-input--header-search" id="search-input">
+          <div class="main-header-search-result">
+            <div class="main-header-search-result-content">
+              <span class="main-header-search-result-item--empty">
+                Результатов не найдено
+              </span>
+              <a href="#" class="main-header-search-result-item">Lorem ipsum dolor sit, amet</a>
+              <a href="#" class="main-header-search-result-item">Lorem ipsum</a>
+              <a href="#" class="main-header-search-result-item">Lorem ipsum dolor sit</a>
+            </div>
+          </div>
+        </div>
+        <button class="btn-search main-header-btn-search btn-search--hide-mobile header-link-item" onclick="onToggleSearch()">
           <svg class="svg-icon btn-search-icon">
             <use
               xlink:href="./images/sprites/svg/sprite.symbol.svg#search"
             ></use>
           </svg>
         </button>
+
         <a
           href="#"
           class="btn btn-heart main-header-btn-heart btn-heart--full header-link-item"
@@ -111,6 +126,7 @@
           <span class="visually-hidden">корзина</span>
         </a>
       </div>
+    </div>
     </header>
 
     <div class="product-page">
@@ -350,7 +366,7 @@
               <h2 class="product-about-buy-title">
                 Костюм Amour (<span id="productColorTitle">голубой</span>)
               </h2>
-              <span class="product-about-buy-price"><span id="productCost">2 000</span>₽</span>
+              <span class="product-about-buy-price"><span id="productCost">2 000</span><span class="currency">₽</span></span>
               <button
                 class="btn-heart btn-heart--big product-about-btn-heart"
                 onclick="onAddLike(this)"
@@ -425,8 +441,8 @@
                 sit
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 ₽</span>
-                <span class="price-item price-item--old">15 000 ₽</span>
+                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -456,7 +472,7 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item">10 000 ₽</span>
+                <span class="price-item">10 000 <span class="currency">₽</span></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -486,8 +502,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 ₽</span>
-                <span class="price-item price-item--old">15 000 ₽</span>
+                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -517,8 +533,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 ₽</span>
-                <span class="price-item price-item--old">15 000 ₽</span>
+                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -548,8 +564,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 ₽</span>
-                <span class="price-item price-item--old">15 000 ₽</span>
+                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -579,8 +595,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 ₽</span>
-                <span class="price-item price-item--old">15 000 ₽</span>
+                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -610,8 +626,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 ₽</span>
-                <span class="price-item price-item--old">15 000 ₽</span>
+                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -641,8 +657,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 ₽</span>
-                <span class="price-item price-item--old">15 000 ₽</span>
+                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -672,8 +688,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 ₽</span>
-                <span class="price-item price-item--old">15 000 ₽</span>
+                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -709,6 +725,15 @@
             placeholder="E-mail"
             class="base-input subscribe-block-input"
           />
+          <div class="subscribe-nda-text">
+            <label class="custom-checkbox-wrapper custom-checkbox-wrapper--catalog-nav">
+              <input type="checkbox" class="custom-checkbox" onchange="onSetFilter('value')">
+  
+              <span class="custom-checkbox-check"></span>
+              <span class="custom-checkbox-text custom-checkbox-text--footer">Я соглашаюсь на обработку моих персональных данных
+                и ознакомлен(а) с условиями публичной оферты</span>
+            </label>
+          </div>
           <button class="btn-primary subscribe-block-btn" type="submit">
             Подписаться
           </button>
@@ -740,6 +765,7 @@
         </div>
       </div>
     </footer>
+
     <div class="popup-about-check-wrapper popup-about-check">
       <div class="popup-about-check-overlay" onclick="toggleCheckPopop()"></div>
       <article class="product-about-check-block">
@@ -762,7 +788,7 @@
             Костюм Amour (голубой) 32 EU (XXS)
           </h4>
           <div class="product-about-check-bottom">
-            <span class="product-about-check-price">10 000 ₽</span>
+            <span class="product-about-check-price">10 000 <span class="currency">₽</span></span>
             <a href="#" class="link-gold product-about-check-link"
               >перейти к покупке</a
             >
