--- a/app/order.html
+++ b/app/order.html
@@ -155,7 +155,7 @@
             <label for="delivery2" class="btn-radio-label">
               <span class="btn-radio-icon"></span>
               <span class="btn-radio-label-title">Курьером Amour с примеркой</span>
-              <span class="btn-radio-label-sub-title"> от 350 <span class="currency">₽</span> в пределах МКАД</span>
+              <span class="btn-radio-label-sub-title"> от 350 <i class="fa fa-rub" aria-hidden="true"></i> в пределах МКАД</span>
             </label>
             </div> 
 
@@ -164,7 +164,7 @@
             <label for="delivery3" class="btn-radio-label">
               <span class="btn-radio-icon"></span>
               <span class="btn-radio-label-title">Курьером Amour за МКАД</span>
-              <span class="btn-radio-label-sub-title"> от 600 <span class="currency">₽</span>, стоимость расчитывается индивидуально, оплата наличными </span>
+              <span class="btn-radio-label-sub-title"> от 600 <i class="fa fa-rub" aria-hidden="true"></i>, стоимость расчитывается индивидуально, оплата наличными </span>
             </label>
             </div> 
 
@@ -173,7 +173,7 @@
             <label for="delivery4" class="btn-radio-label">
               <span class="btn-radio-icon"></span>
               <span class="btn-radio-label-title">Курьером CDEK</span>
-              <span class="btn-radio-label-sub-title"> от 380 <span class="currency">₽</span>, в зависимости от адреса доставки </span>
+              <span class="btn-radio-label-sub-title"> от 380 <i class="fa fa-rub" aria-hidden="true"></i>, в зависимости от адреса доставки </span>
             </label>
             </div> 
           </div>
