--- a/app/basket.html
+++ b/app/basket.html
@@ -135,7 +135,7 @@
           <div class="basket-head">
             <h1 class="basket-head-title">Корзина</h1>
             <p class="basket-head-sub-title">
-              <span>2</span> товара на сумму <span >20 000 <span class="currency">₽</span></span>
+              <span>2</span> товара на сумму <span >20 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
             </p>
           </div>
         </div>
@@ -185,7 +185,7 @@
                         <input class="item-counter-input" type="text"  value="0" size="4" readonly id="counter1">
                         <button class="btn-item-counter btn-item-counter--plus" onclick="onCounterPlus('counter1')"><span>+</span></button>
                       </div>
-                      <div class="basket-product-item-cost-wrapper"><span>10 000</span> <span class="currency"> <span class="currency">₽</span></span></div>
+                      <div class="basket-product-item-cost-wrapper"><span>10 000</span> <span class="currency"> <i class="fa fa-rub" aria-hidden="true"></i></span></div>
                     </div>
                   </div>
                 </div>
@@ -224,7 +224,7 @@
                         <input class="item-counter-input" type="text"  value="0" size="4" readonly id="counter2">
                         <button class="btn-item-counter btn-item-counter--plus" onclick="onCounterPlus('counter2')"><span>+</span></button>
                       </div>
-                      <div class="basket-product-item-cost-wrapper"><span>10 000</span> <span class="currency"> <span class="currency">₽</span></span></div>
+                      <div class="basket-product-item-cost-wrapper"><span>10 000</span> <span class="currency"> <i class="fa fa-rub" aria-hidden="true"></i></span></div>
                     </div>
                   </div>
                 </div>
@@ -315,8 +315,8 @@
                 sit
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -346,7 +346,7 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item">10 000 <span class="currency">₽</span></span>
+                <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -376,8 +376,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -407,8 +407,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
