--- a/app/catalog.html
+++ b/app/catalog.html
@@ -381,7 +381,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 <span class="currency">₽</span></span>
+                  <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -424,7 +424,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 <span class="currency">₽</span></span>
+                  <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -467,7 +467,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 <span class="currency">₽</span></span>
+                  <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -509,7 +509,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 <span class="currency">₽</span></span>
+                  <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -551,7 +551,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 <span class="currency">₽</span></span>
+                  <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -593,7 +593,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 <span class="currency">₽</span></span>
+                  <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -635,7 +635,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 <span class="currency">₽</span></span>
+                  <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
@@ -677,7 +677,7 @@
                   <strong>Кофта</strong> с объёмными пл
                 </h4>
                 <div class="product-recommend-item-price product-recommend-item-price--catalog">
-                  <span class="price-item">10 000 <span class="currency">₽</span></span>
+                  <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                 </div>
                 <div class="product-recommend-item-color product-recommend-item-color--catalog">
                   <div
