--- a/app/index.html
+++ b/app/index.html
@@ -191,8 +191,8 @@
                     sit
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                    <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                    <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                    <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -222,7 +222,7 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item">10 000 <span class="currency">₽</span></span>
+                    <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -252,8 +252,8 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                    <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                    <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                    <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -283,7 +283,7 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item">10 000 <span class="currency">₽</span></span>
+                    <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -312,7 +312,7 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item">10 000 <span class="currency">₽</span></span>
+                    <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -341,7 +341,7 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item">10 000 <span class="currency">₽</span></span>
+                    <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -370,7 +370,7 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item">10 000 <span class="currency">₽</span></span>
+                    <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
@@ -400,8 +400,8 @@
                     <strong>Кофта</strong> с объёмными пл
                   </h4>
                   <div class="product-recommend-item-price product-recommend-item-price--mp">
-                    <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                    <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                    <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                    <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
                   </div>
                   <div class="product-recommend-item-color product-recommend-item-color--mp">
                     <div
