--- a/app/product.html
+++ b/app/product.html
@@ -366,7 +366,7 @@
               <h2 class="product-about-buy-title">
                 Костюм Amour (<span id="productColorTitle">голубой</span>)
               </h2>
-              <span class="product-about-buy-price"><span id="productCost">2 000</span><span class="currency">₽</span></span>
+              <span class="product-about-buy-price"><span id="productCost">2 000</span><i class="fa fa-rub" aria-hidden="true"></i></span>
               <button
                 class="btn-heart btn-heart--big product-about-btn-heart"
                 onclick="onAddLike(this)"
@@ -441,8 +441,8 @@
                 sit
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -472,7 +472,7 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item">10 000 <span class="currency">₽</span></span>
+                <span class="price-item">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -502,8 +502,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -533,8 +533,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -564,8 +564,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -595,8 +595,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -626,8 +626,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -657,8 +657,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -688,8 +688,8 @@
                 <strong>Кофта</strong> с объёмными пл
               </h4>
               <div class="product-recommend-item-price">
-                <span class="price-item price-item--discount">10 000 <span class="currency">₽</span></span>
-                <span class="price-item price-item--old">15 000 <span class="currency">₽</span></span>
+                <span class="price-item price-item--discount">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                <span class="price-item price-item--old">15 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
               </div>
               <div class="product-recommend-item-color">
                 <div
@@ -788,7 +788,7 @@
             Костюм Amour (голубой) 32 EU (XXS)
           </h4>
           <div class="product-about-check-bottom">
-            <span class="product-about-check-price">10 000 <span class="currency">₽</span></span>
+            <span class="product-about-check-price">10 000 <i class="fa fa-rub" aria-hidden="true"></i></span>
             <a href="#" class="link-gold product-about-check-link"
               >перейти к покупке</a
             >
